# gg_engine

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Sandbox.ggproject  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: AssetRegistry.ggregistry
assets/meshes/: quad.gltf  suzanne_low.gltf  triangle.gltf
assets/scenes/: 2dguy_test.ggscene  Test.autosave.ggscene  action_test.ggscene  audio_test.ggscene  frustum_culling_test.ggscene  hrtf_test.ggscene  level_select.ggscene  lua_camera_follow.ggscene  main_menu.ggscene  mesh_test.ggscene  native_camera_follow.ggscene  new.ggscene  particle_test.ggscene  pbr_showcase.autosave.ggscene  pbr_showcase.ggscene  showcase_2d.ggscene  showcase_3d.ggscene  showcase_ui.ggscene  text.ggscene  tilemap_test.ggscene  ui_test.ggscene  walking_anim.ggscene
assets/scripts/: 2dguy_controller.lua  action_test.lua  animated_walker.lua  audio_test.lua  (+11 more)
docs/: 01-build-and-tools.md  02-ecs.md  05-physics.md  06-rendering.md  07-scripting.md  08-serialization.md  09-assets.md  10-audio.md
gg_assets/: Cargo.toml
gg_assets/src/: asset_loader.rs  asset_manager.rs  asset_registry.rs  cooking.rs  lib.rs
gg_core/: Cargo.toml
gg_core/src/: cursor.rs  error.rs  input.rs  input_action.rs  lib.rs  logging.rs  platform_utils.rs  profiling.rs  timestep.rs  uuid.rs
gg_core/src/events/: mod.rs  mouse.rs
gg_core/src/jobs/: mod.rs
gg_docs/: 01-build-and-tools.md  02-ecs.md  03-editor.md  04-engine-core.md  05-physics.md  06-rendering.md  07-scripting.md  08-serialization.md  09-assets.md  10-audio.md  11-player-and-project.md  12-jobs-system.md  13-3d-rendering.md  14-input-actions.md  README.md
gg_editor/: Cargo.toml
gg_editor/src/: build.rs  camera_controller.rs  editor_settings.rs  file_ops.rs  gizmo.rs  hub.rs  icons.rs  main.rs  physics_player.rs  playback.rs  selection.rs  title_bar.rs  toolbar.rs  undo.rs
gg_editor/src/panels/: animation_timeline.rs  console.rs  content_browser.rs  game_viewport.rs  mod.rs  project.rs  properties.rs  scene_hierarchy.rs  settings.rs  viewport.rs
gg_editor/src/panels/properties/: audio.rs  camera.rs  environment.rs  lighting.rs  mesh.rs  mod.rs  particles.rs  physics.rs  scripting.rs  skeletal_animation.rs  sprite.rs  text.rs  tilemap.rs  ui_anchor.rs  ui_image.rs  ui_interactable.rs  ui_layout.rs  ui_rect.rs
gg_engine/: Cargo.toml  build.rs
gg_engine/examples/: gen_textures.rs
gg_engine/src/: application.rs  cursor.rs  error.rs  input.rs  input_action.rs  layer.rs  lib.rs  logging.rs  orthographic_camera_controller.rs  particle_system.rs  platform_utils.rs  profiling.rs  project.rs  ui_theme.rs  uuid.rs
gg_engine/src/asset/: asset_loader.rs  asset_manager.rs  asset_registry.rs  cooking.rs  mod.rs
gg_engine/src/events/: gamepad.rs  key.rs  mod.rs  mouse.rs  window.rs
gg_engine/src/jobs/: command_buffer.rs  mod.rs  parallel.rs
gg_engine/src/renderer/: bone_palette.rs  buffer.rs  camera_system.rs  compute.rs  cubemap.rs  draw_context.rs  editor_camera.rs  environment_map.rs  font.rs  framebuffer.rs  gpu_allocation.rs  gpu_particle_system.rs  gpu_profiling.rs  lighting.rs  material.rs  mesh.rs  mod.rs  msdf.rs  orthographic_camera.rs  pipeline.rs  postprocess.rs  render_command.rs  renderer.rs  renderer_2d.rs  renderer_api.rs  scene_camera.rs  shader.rs  shader_compiler.rs  shader_library.rs  shadow_map.rs  skeleton.rs  sub_texture.rs  swapchain.rs  texture.rs  triangle.rs  uniform_buffer.rs  vertex_array.rs  vulkan_context.rs
gg_engine/src/renderer/shaders/: batch.glsl  batch_swapchain.glsl  bilateral_blur.glsl  bloom_downsample.glsl  circle.glsl  circle_swapchain.glsl  equirect_to_cube.glsl  flat_color.frag  flat_color.glsl  flat_color.vert  flat_color_frag.spv  flat_color_vert.spv  instance.glsl  instance_swapchain.glsl  irradiance_convolve.glsl  line.glsl  line_swapchain.glsl  mesh3d.glsl  particle_sim.glsl  postprocess_composite.glsl  shadow.glsl  shadow_alpha.glsl  skinned_mesh3d.glsl  skinned_shadow.glsl  text.glsl  text_swapchain.glsl  texture.frag  texture.glsl  texture.vert  texture_frag.spv  texture_vert.spv  triangle.frag  triangle.glsl  triangle.vert  triangle_frag.spv  triangle_vert.spv
gg_engine/src/scene/: animation.rs  audio.rs  audio_ops.rs  components.rs  core.rs  entity.rs  hierarchy.rs  hrtf.rs  lua_ops.rs  mod.rs  native_script.rs  physics_2d.rs  physics_3d.rs  physics_3d_ops.rs  physics_common.rs  physics_ops.rs  rendering.rs  runtime.rs  scene_serializer.rs  script_engine.rs  script_glue.rs  spatial.rs
gg_engine/tests/: scene_integration.rs
gg_player/: Cargo.toml
gg_player/src/: main.rs  player.rs
gg_renderer/: Cargo.toml  build.rs
gg_renderer/src/: bone_palette.rs  buffer.rs  camera_system.rs  compute.rs  cubemap.rs  draw_context.rs  editor_camera.rs  environment_map.rs  font.rs  framebuffer.rs  gpu_allocation.rs  gpu_particle_system.rs  gpu_profiling.rs  ibl_cache.rs  lib.rs  lighting.rs  material.rs  mesh.rs  msdf.rs  orthographic_camera.rs  pipeline.rs  postprocess.rs  render_command.rs  renderer.rs  renderer_2d.rs  renderer_api.rs  scene_camera.rs  shader.rs  shader_compiler.rs  shader_library.rs  shaders.rs  shadow_map.rs  sub_texture.rs  swapchain.rs  texture.rs  uniform_buffer.rs  vertex_array.rs  vulkan_context.rs
gg_renderer/src/shaders/: batch.glsl  bloom_downsample.glsl  bloom_upsample.glsl  brdf_lut.glsl  circle.glsl  contact_shadows.glsl  depth_resolve.glsl  mesh3d.glsl  particle_sim.glsl  prefilter_specular.glsl  shadow.glsl  skybox.glsl  text.glsl
gg_renderer/src/shaders/legacy/: triangle.glsl
gg_sandbox/: Cargo.toml
gg_sandbox/src/: cursor_test.rs  jobs_stress.rs  main.rs  sandbox2d.rs  sandbox3d.rs
gg_scene/: Cargo.toml
gg_scene/src/: animation.rs  audio.rs  audio_ops.rs  command_buffer.rs  components.rs  core.rs  entity.rs  hierarchy.rs  hrtf.rs  lib.rs  lua_ops.rs  native_script.rs  physics_2d.rs  physics_3d.rs  physics_3d_ops.rs  physics_common.rs  physics_ops.rs  rendering.rs  runtime.rs  scene_serializer.rs  script_engine.rs  script_glue.rs
gg_tools/: Cargo.toml
scripts/: audit.sh
(+1 files in other folders)
