[package]
name = "gg_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true
publish.workspace = true

[features]
default = ["profiling", "lua-scripting", "gamepad"]
profiling = []
lua-scripting = ["mlua"]
gamepad = []

[dependencies]
log.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
rfd.workspace = true
mlua = { workspace = true, optional = true }
