[package]
name = "gg_editor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["profiling", "lua-scripting"]
profiling = ["gg_engine/profiling"]
lua-scripting = ["gg_engine/lua-scripting", "dep:notify"]

[dependencies]
gg_engine = { path = "../gg_engine", default-features = false }
egui_dock = "0.18"
transform-gizmo-egui = "0.8"
notify = { version = "7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
