[package]
name = "gg_editor"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true
publish.workspace = true

[features]
default = ["profiling", "lua-scripting", "gamepad"]
profiling = ["gg_engine/profiling"]
lua-scripting = ["gg_engine/lua-scripting", "dep:notify"]
gamepad = ["gg_engine/gamepad"]

[dependencies]
gg_engine = { path = "../gg_engine", default-features = false }
egui_dock.workspace = true
transform-gizmo-egui.workspace = true
notify = { workspace = true, optional = true }
serde.workspace = true
serde_yaml_ng.workspace = true
