[package]
name = "gg_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["profiling", "lua-scripting"]
profiling = []
lua-scripting = ["mlua"]

[dependencies]
log.workspace = true
winit.workspace = true
ash.workspace = true
ash-window.workspace = true
raw-window-handle.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
glam.workspace = true
image.workspace = true
hecs.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
rfd.workspace = true
rand.workspace = true
rapier2d.workspace = true
rapier3d.workspace = true
mlua = { workspace = true, optional = true }
ttf-parser.workspace = true
gltf.workspace = true
gpu-allocator.workspace = true
kira.workspace = true
rayon.workspace = true
thiserror.workspace = true
