[package]
name = "gg_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true
publish.workspace = true

[features]
default = ["profiling", "lua-scripting", "gamepad", "physics-3d"]
profiling = ["gg_core/profiling", "gg_renderer/profiling"]
lua-scripting = ["mlua", "gg_core/lua-scripting"]
gamepad = ["gilrs", "gg_core/gamepad"]
physics-3d = ["rapier3d"]

[dependencies]
gg_core = { path = "../gg_core" }
gg_renderer = { path = "../gg_renderer" }
log.workspace = true
winit.workspace = true
ash.workspace = true
ash-window.workspace = true
raw-window-handle.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
glam.workspace = true
image.workspace = true
hecs.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
serde_json.workspace = true
rand.workspace = true
rapier2d.workspace = true
rapier3d = { workspace = true, optional = true }
mlua = { workspace = true, optional = true }
gilrs = { workspace = true, optional = true }
kira.workspace = true
rayon.workspace = true
parking_lot.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
base64.workspace = true
