[package]
name = "gg_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true
publish.workspace = true

[features]
default = ["profiling", "lua-scripting", "gamepad", "physics-3d"]
profiling = ["gg_core/profiling", "gg_renderer/profiling", "gg_scene/profiling"]
lua-scripting = ["mlua", "gg_core/lua-scripting", "gg_scene/lua-scripting"]
gamepad = ["gilrs", "gg_core/gamepad", "gg_scene/gamepad"]
physics-3d = ["gg_scene/physics-3d"]

[dependencies]
gg_core = { path = "../gg_core" }
gg_renderer = { path = "../gg_renderer" }
gg_assets = { path = "../gg_assets" }
gg_scene = { path = "../gg_scene" }
log.workspace = true
winit.workspace = true
ash.workspace = true
ash-window.workspace = true
raw-window-handle.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
glam.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
mlua = { workspace = true, optional = true }
gilrs = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
image.workspace = true
