[package]
name = "gg_player"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[features]
default = ["profiling", "lua-scripting"]
profiling = ["gg_engine/profiling"]
lua-scripting = ["gg_engine/lua-scripting"]

[dependencies]
gg_engine = { path = "../gg_engine", default-features = false }
