[package]
name = "gg_renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true
publish.workspace = true

[features]
default = ["profiling"]
profiling = ["gg_core/profiling"]

[dependencies]
gg_core = { path = "../gg_core" }
winit.workspace = true
log.workspace = true
ash.workspace = true
ash-window.workspace = true
raw-window-handle.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-ash-renderer.workspace = true
glam.workspace = true
image.workspace = true
ttf-parser.workspace = true
gltf.workspace = true
gpu-allocator.workspace = true
half.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
