[package]
name = "gg_sandbox"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true
publish.workspace = true

[features]
default = ["profiling", "lua-scripting", "gamepad"]
profiling = ["gg_engine/profiling"]
lua-scripting = ["gg_engine/lua-scripting"]
gamepad = ["gg_engine/gamepad"]

[dependencies]
gg_engine = { path = "../gg_engine", default-features = false }
image.workspace = true
half.workspace = true
